initial work on ow:Authenticator

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,6 +2,7 @@ set(COMPONENT_SRCS
 # BTLE Lib - my app
         main.cpp
         ow/Connector.cpp
+        ow/Authenticator.cpp
 # BTLE Lib - sample app
 #        BLE_Arduino/BLE_client.cpp
 # IDF BTLE - modified sample
