--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "components/ESP32_BLE_Arduino"]
 	path = components/ESP32_BLE_Arduino
 	url = git@github.com:nehlsen/ESP32_BLE_Arduino.git
+[submodule "components/EBLi"]
+	path = components/EBLi
+	url = git@github.com:nehlsen/EBLi.git
